# carla-studio

./: .gitignore  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DEVELOP.md  LICENSE  Makefile  README.md
LICENSES/: THIRD_PARTY.md
app/: CMakeLists.txt  carla_studio.cpp
app/cfg/rviz/: carla_mcity_ros2.rviz
app/core/: start.sh  studio_app_context.cpp
app/icons/: carla-studio.qrc
app/icons/linux/: install.sh
app/integrations/hf/: hugging_face.cpp  hugging_face.h
app/setup/: prereq_probe.cpp  prereq_probe.h  setup_wizard_dialog.cpp  setup_wizard_dialog.h
app/tests/: carla_studio_app_test.cpp  cli_pipeline_test.cpp  studio_gui_matrix.cpp
app/traffic/: player_slots.h
app/utils/: manage_sleep.sh  platform_proc.h  quick_autoware_setup.sh  resource_fit.cpp  resource_fit.h  setup_autoware.sh  validate_10_terminals.sh  validate_implementations.sh  wait_functions.sh
app/vehicle/calibration/: calibration_scene.cpp  calibration_scene.h
app/vehicle/import/: CarlaTools.cpp  bp_autopicker.cpp  bp_autopicker.h  calibration_cli.cpp  canonicalizer.cpp  canonicalizer.h  carla_spawn.cpp  carla_spawn.h  cleanup_cli.cpp  cook_step.cpp  cook_step.h  editor_process.cpp  editor_process.h  import_mode.cpp  import_mode.h  import_pipeline.cpp  import_pipeline.h  import_test_cli.cpp  importer_client.cpp  importer_client.h  kit_bundler.cpp  kit_bundler.h  merged_spec_builder.cpp  merged_spec_builder.h  mesh_aabb.cpp  mesh_aabb.h  mesh_analysis.cpp  mesh_analysis.h  mesh_convert_page.cpp  mesh_convert_page.h  mesh_geometry.cpp  mesh_geometry.h  mesh_preview_renderer.cpp  mesh_preview_renderer.h  name_sanitizer.cpp  name_sanitizer.h  obj_sanitizer.cpp  obj_sanitizer.h  plugin_setup.cpp  plugin_setup.h  (+17 more)
app/vehicle/mount/: sensor_mount_key.h
docs/: BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  TEST.md  THIRD_PARTY.md  USAGE.md
docs/usage/: USAGE.md
resources/: README.md  carla-studio.qrc
resources/examples/: empty_flat.xodr  sample_osm_rural.xodr  scenario_town01_demo.json  two_lane_10mi.xodr
resources/integrations/launch/: terminal_launch_map.json
resources/integrations/run/: terminal5_cosim_runner.sh  terminal8_preview_runner.sh  terminal9_scenario_runner.sh
resources/integrations/scripts/: start.sh  stop.sh  wait_functions.sh
resources/integrations/scripts/setup/: advanced_build_autoware.sh  build_autoware.sh  carla_launcher.sh  check_dependency_status.sh  keep_alive.sh  manage_sleep.sh  quick_autoware_setup.sh  setup_autoware.sh  test_terminal5_fix.sh  validate_10_terminals.sh  validate_implementations.sh
resources/linux/: README.txt  carla-studio.desktop  install.sh
resources/macos/: carla-studio.icns
resources/plugin_patches/CarlaTools/: VehicleImporter.cpp  VehicleImporter.h
src/: CMakeLists.txt  carla_studio.cpp
src/app/: carla_studio.cpp
src/calibration/: CalibrationScene.cpp  CalibrationScene.h
src/cfg/: env.ini
src/core/: PlayerSlots.h  SensorMountKey.h  StudioAppContext.cpp  StudioAppContext.h  cli_entry_points.h  cosim_cli.cpp  healthcheck_cli.cpp  keepalive_cli.cpp  maps_cli.cpp  preview_cli.cpp  scenario_cli.cpp  setup_cli.cpp  stack_cli.cpp  start_cli.cpp  stop.sh  stop_cli.cpp  studio_app_context.h
src/icons/: README.md  carla-studio.qrc
src/icons/linux/: README.txt  carla-studio.desktop
src/icons/macos/: carla-studio.icns
src/icons/windows/: carla-studio.rc
src/integrations/: HuggingFace.cpp  HuggingFace.h
src/integrations/hf/: hugging_face.cpp  hugging_face.h
src/integrations/scripts/: terminal5_cosim_runner.sh  terminal8_preview_runner.sh  terminal9_scenario_runner.sh
src/interfaces/: actuate_cli.cpp  sensor_cli.cpp
src/setup/: prereq_probe.cpp  prereq_probe.h  setup_wizard_dialog.cpp  setup_wizard_dialog.h
src/setup_wizard/: PrereqProbe.cpp  PrereqProbe.h  SetupWizardDialog.cpp  SetupWizardDialog.h
src/tests/: CarlaStudioAppTest.cpp  carla_studio_app_test.cpp  cli_pipeline_test.cpp  quick_runtime_checks.sh  studio_gui_matrix.cpp
src/tests/fixtures/c18_calibration_round_trip/matrix-test/: RGB.json
src/traffic/: player_slots.h
src/utils/: PlatformProc.h  ResourceFit.cpp  ResourceFit.h  advanced_build_autoware.sh  build_autoware.sh  carla_launcher.sh  check_dependency_status.sh  keep_alive.sh  platform_proc.h  resource_fit.cpp  resource_fit.h  test_terminal5_fix.sh
src/utils/launch/: terminal_launch_map.json
src/vehicle/calibration/: calibration_scene.cpp  calibration_scene.h
src/vehicle/import/: CarlaTools.cpp  VehicleImporter.cpp  VehicleImporter.h  blender_calibration.cpp  blender_calibration.h  bp_autopicker.cpp  bp_autopicker.h  calibration_cli.cpp  canonicalizer.cpp  canonicalizer.h  carla_spawn.cpp  carla_spawn.h  cleanup_cli.cpp  cook_step.cpp  cook_step.h  editor_process.cpp  editor_process.h  import_mode.cpp  import_mode.h  import_pipeline.cpp  import_pipeline.h  import_test_cli.cpp  importer_client.cpp  importer_client.h  kit_bundler.cpp  kit_bundler.h  merged_spec_builder.cpp  merged_spec_builder.h  mesh_aabb.cpp  mesh_aabb.h  mesh_analysis.cpp  mesh_analysis.h  mesh_convert_page.cpp  mesh_convert_page.h  mesh_geometry.cpp  mesh_geometry.h  mesh_preview_renderer.cpp  mesh_preview_renderer.h  name_sanitizer.cpp  name_sanitizer.h  (+21 more)
src/vehicle/mount/: sensor_mount_key.h
src/vehicle_import/: BPAutopicker.cpp  BPAutopicker.h  CalibrationCli.cpp  Canonicalizer.cpp  Canonicalizer.h  CarlaSpawn.cpp  CarlaSpawn.h  CookStep.cpp  CookStep.h  EditorProcess.cpp  EditorProcess.h  ImportMode.cpp  ImportMode.h  ImportTestCli.cpp  ImporterClient.cpp  ImporterClient.h  KitBundler.cpp  KitBundler.h  MergedSpecBuilder.cpp  MergedSpecBuilder.h  MeshAABB.cpp  MeshAABB.h  MeshAnalysis.cpp  MeshAnalysis.h  MeshConvertPage.cpp  MeshConvertPage.h  MeshGeometry.cpp  MeshGeometry.h  MeshPreviewRenderer.cpp  MeshPreviewRenderer.h  NameSanitizer.cpp  NameSanitizer.h  ObjSanitizer.cpp  ObjSanitizer.h  PluginSetup.cpp  PluginSetup.h  PrebuiltPackagePage.cpp  PrebuiltPackagePage.h  SpecApplicator.cpp  SpecApplicator.h  (+10 more)
tests/: quick_runtime_checks.sh
